# BaleInTheTrain

./: .gitignore  CMakeLists.txt  build_log.txt  棋牌类策划案.doc
assets/: 素材要求.txt
audio/: 音效.txt
code/: CMakeLists.txt  README.md
code/include/: README.txt
code/src/: main.cpp
include/: AudioManager.h  BattleInputHander.h  BattleLogic.h  BattleRender.h  BattleUI.h  BuffAndDebuff  BuffAndDebuff.h  Card.h  Constants.h  DialogManager.h  Enemy.h  FadeManager.h  Game.h  GameContext.h  Input.h  Panel.h  Player.h  Renderer.h  ResourceManager.h  Scene.h  SceneManager.h  TextHintManager.h  UIManager.h
include/Scene/: Scene.h  SceneManager.h
include/Tools/: AudioManager.h  ResourceManager.h  TimeSystem.h
include/UI/: AnimationManager.h  Panel.h  RewardAnimation.h  TextHintManager.h  TextPromptManager.h  UIManager.h
src/: AudioManager.cpp  BattleLogic.cpp  BattleRender.cpp  DialogManager.cpp  Game.cpp  Input.cpp  Panel.cpp  Player.cpp  Renderer.cpp  Scene.cpp  TextHintManager.cpp  UIManager.cpp  main.cpp
